--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ index.html
 
 tables/UDCMAP.TXT
 tables/spri_serials_recs_edited_summer_2006.mrk
+tables/authoritiesnames.nt.skos
 
 exports/*
 !exports/.gitignore
