--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "libpurecontent/jquery": "^1.1",
         "libpurecontent/pagination": "^1.1",
         "libpurecontent/application": "^1.9",
-        "libpurecontent/ultimateform": "^1.29"
+        "libpurecontent/ultimateform": "^1.29",
+        "fale/isbn": "3.0.0"
     },
     "autoload": {
         "files": ["muscatConversion.php", "reports.php", "import.php", "marcConversion.php", "generateAuthors.php", "generate008.php", "generate245.php", "transliteration.php", "createMarcExport.php"]
